<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="pizzaDetailsFragment"
            type="com.bakirdev.pizzaorder.PizzaDetails" />

        <variable
            name="pizzaName"
            type="String" />

        <variable
            name="pizzaPrice"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".PizzaDetails">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/pizzaDetails_Image"
            android:layout_width="0dp"
            android:layout_height="@dimen/_200sdp"
            android:background="@color/white_one"
            android:src="@drawable/pizza"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_corner_radius_bottom_left="@dimen/_40sdp"
            app:riv_corner_radius_bottom_right="@dimen/_40sdp"
            app:riv_mutate_background="true" />

        <TextView
            android:id="@+id/pizzaDetails_Name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/doppio_one"
            android:text="@{pizzaName}"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/_28ssp"
            app:layout_constraintEnd_toStartOf="@+id/pizzaMenuItem_Price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pizzaDetails_Image" />

        <TextView
            android:id="@+id/pizzaMenuItem_Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/doppio_one"
            android:text="@{pizzaPrice}"
            android:textColor="@color/black"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintBottom_toBottomOf="@+id/pizzaDetails_Name"
            app:layout_constraintEnd_toEndOf="@+id/pizzaDetails_Image"
            app:layout_constraintTop_toTopOf="@+id/pizzaDetails_Name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/quantity_cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pizzaDetails_Name">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/doppio_one"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="@dimen/_22ssp" />

            <RadioGroup
                android:id="@+id/first_radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:ems="4"
                    android:fontFamily="@font/doppio_one"
                    android:gravity="center"
                    android:text="@string/eight_oclock"
                    android:textSize="@dimen/_18ssp" />

                <RadioButton
                    android:id="@+id/two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:buttonTint="@color/black"
                    android:ems="4"
                    android:fontFamily="@font/doppio_one"
                    android:gravity="center"
                    android:text="@string/ten_oclock"
                    android:textSize="@dimen/_18ssp" />

                <RadioButton
                    android:id="@+id/three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:buttonTint="@color/black"
                    android:ems="4"
                    android:fontFamily="@font/doppio_one"
                    android:gravity="center"
                    android:text="@string/twelve_oclock"
                    android:textSize="@dimen/_18ssp" />

                <RadioButton
                    android:id="@+id/four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:buttonTint="@color/black"
                    android:ems="4"
                    android:fontFamily="@font/doppio_one"
                    android:gravity="center"
                    android:text="@string/five_pm_oclock"
                    android:textSize="@dimen/_18ssp" />

            </RadioGroup>

            <RadioGroup
                android:id="@+id/second_radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:ems="4"
                    android:fontFamily="@font/doppio_one"
                    android:gravity="center"
                    android:text="@string/nine_oclock"
                    android:textSize="@dimen/_18ssp" />

                <RadioButton
                    android:id="@+id/six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:buttonTint="@color/black"
                    android:ems="4"
                    android:fontFamily="@font/doppio_one"
                    android:gravity="center"
                    android:text="@string/eleven_oclock"
                    android:textSize="@dimen/_18ssp" />

                <RadioButton
                    android:id="@+id/seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:buttonTint="@color/black"
                    android:ems="4"
                    android:fontFamily="@font/doppio_one"
                    android:gravity="center"
                    android:text="@string/four_pm_oclock"
                    android:textSize="@dimen/_18ssp" />

                <RadioButton
                    android:id="@+id/eight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:buttonTint="@color/black"
                    android:ems="4"
                    android:fontFamily="@font/doppio_one"
                    android:gravity="center"
                    android:text="@string/six_pm_oclock"
                    android:textSize="@dimen/_18ssp" />

            </RadioGroup>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/quantity_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_background"
                android:orientation="vertical"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/pizza_minusQuantity"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_weight="1"
                        android:onClick="@{()->pizzaDetailsFragment.minusQuantity()}"
                        android:src="@drawable/minus" />


                    <TextView
                        android:id="@+id/pizza_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:fontFamily="@font/doppio_one"
                        android:text="1"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_20ssp" />

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/pizza_addQuantity"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_weight="1"
                        android:onClick="@{()->pizzaDetailsFragment.plusQuantity()}"
                        android:src="@drawable/plus" />


                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/button_background"
                    android:elevation="@dimen/_5sdp"
                    android:fontFamily="@font/doppio_one"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:onClick="@{()-> pizzaDetailsFragment.confirmOrder()}"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/confirm_your_order"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>